...
                            }
                        }
                    },
            ) {
                AsyncImage(
                    uri = asset.localUri,
                    contentDescription = "图片预览",
                    modifier = Modifier.fillMaxSize().graphicsLayer {
                        scaleX = scale
                        scaleY = scale
                        translationX = offset.x
                        translationY = offset.y
                    },
...
